# crowdsec-unifi-bouncer

./: .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  bootstrap.sh  bouncer.py  crowdsec-firewall-bouncer.service  crowdsec-firewall-bouncer.yaml.example  crowdsec-unifi-metrics.service  detect-device.sh  detect-sidecar.sh  docker-compose.yml  ensure-rules.sh  install.sh  ipset-capacity-monitor.sh  metrics.sh  pyproject.toml  setup.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docker-publish.yml  lint.yml
crowdsec_unifi_bouncer/: __init__.py
grafana/: README.md  crowdsec-unifi-bouncer-dashboard.json
sidecar/: .gitignore  Dockerfile  Makefile  README.md  config.yaml.example  docker-compose.yaml  go.mod
sidecar/cmd/sidecar/: main.go
sidecar/internal/config/: config.go  config_test.go
sidecar/internal/lapi/: client.go  client_test.go
sidecar/internal/proxy/: handler.go  handler_test.go
sidecar/internal/scorer/: scorer.go  scorer_test.go
